# binprot-rs

./: .gitignore  Cargo.toml  README.md
binprot_derive/: Cargo.toml
binprot_derive/src/: lib.rs
examples/: rpc_client.rs
src/: async_read_write.rs  async_traits.rs  error.rs  int.rs  lib.rs  shape.rs  traits.rs
tests/: async_tests.rs  derive_tests.ml  derive_tests.rs  derive_use_tests.rs  dune  shape_tests.ml  shape_tests.rs
