[package]
name = "binprot"
version = "0.1.0"
authors = ["laurent <laurent.mazare@gmail.com>"]
edition = "2018"

description = "Rust implementation of the bin_prot protocol."
repository = "https://github.com/LaurentMazare/binprot-rs"
keywords = ["bin_prot", "protocol", "network"]
categories = ["Network programming"]
license = "MIT/Apache-2.0"
readme = "README.md"

[workspace]
members = ["binprot_derive"]

[dependencies]
byteorder = "1.4.3"
binprot_derive = { version = "0.1", path = "binprot_derive" }

[dev-dependencies]
anyhow = "1"
