[package]
name = "binprot"
version = "0.1.0"
authors = ["laurent <laurent.mazare@gmail.com>"]
edition = "2018"

description = "Rust implementation of the bin_prot protocol."
repository = "https://github.com/LaurentMazare/binprot-rs"
keywords = ["bin_prot", "protocol", "network"]
categories = ["network-programming"]
license = "MIT/Apache-2.0"
readme = "README.md"

[workspace]
members = ["binprot_derive"]

[dependencies]
byteorder = "1.4.3"
binprot_derive = { version = "0.1", path = "binprot_derive" }
async-trait = { version = "0.1.50", optional = true }
tokio = { version = "1.8", optional = true, features = ["io-util"] }
uuid = "0.8"

[dev-dependencies]
anyhow = "1"

[features]
async = ["binprot_derive/async", "async-trait", "tokio"]
