[package]
name = "binprot_derive"
version = "0.1.0"
authors = ["laurent <laurent.mazare@gmail.com>"]
edition = "2018"

description = "Derive macro for the bin_prot protocol."
repository = "https://github.com/LaurentMazare/binprot-rs"
keywords = ["bin_prot", "protocol", "macro"]
categories = ["network-programming"]
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
byteorder = "1.4.3"
